<resources>
    <string name="app_name">Beba Água</string>
    <string name="hint_peso">Seu peso (KG)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="text_button_lembrete">LEMBRETE</string>
    <string name="text_button_alarme">ALARME</string>
    <string name="text_hora">00</string>
    <string name="text_doisponto">:</string>
    <string name="text_minutos">00</string>


</resources>