<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <View
            android:id="@+id/Container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_bebaagua"
            app:layout_constraintStart_toStartOf="@id/Container_header"
            app:layout_constraintTop_toTopOf="@id/Container_header" />

        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="@id/Container_header"
            app:layout_constraintTop_toTopOf="@+id/Container_header" />


        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Container_header" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_peso"
            app:layout_constraintTop_toBottomOf="@id/Container_header" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bd_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_degrade_button"
            android:padding="15dp"
            android:text="@string/text_button_calcular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_peso" />

        <View
            android:id="@+id/container_resultado_ml"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bd_calcular" />

        <TextView
            android:id="@+id/txt_resultado_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3008,6 ml"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
            app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
            app:layout_constraintTop_toTopOf="@+id/container_resultado_ml" />

        <Button
            android:id="@+id/bt_definir_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_lembrete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

        <Button
            android:id="@+id/bt_definir_alarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_alarme"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_hora"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_doisponto"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:layout_constraintStart_toEndOf="@id/txt_hora"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_minutos"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>